add redis to app